updated the preferences screen (all borders are light now) fixed log about 2 wrong background properties

--- a/skin/_config/menus.less
+++ b/skin/_config/menus.less
@@ -31,7 +31,7 @@
 @menupopup-menuitem-appearance:         none;
 @menupopup-background:                  lighten(@window-background, 2%);
 @menupopup-color:                       @window-color;
-@menupopup-border:                      1px solid lighten(@main-border-color, 7%);
+@menupopup-border:                      1px solid #555;
 @menupopup-background-active:           #444444;
 @menupopup-color-active:                lighten(@window-color, 10%);
 @menupopup-disabled-color:              fade(@window-color, 35%);
