--- a/skin/_config/tabs.less
+++ b/skin/_config/tabs.less
@@ -4,7 +4,7 @@
 @tab-box-box-shadow:                    none;
 @tab-box-border:                        1px solid darken(@main-border-color, 10%);
 @tab-box-background-color:              @window-background;
-@tab-box-background-image:              #222;
+@tab-box-background-image:              none;
 @tab-box-background-image-vertical:     none;
 @tab-box-background-icons:              #444;
 @tab-box-box-shadow-icons:              none;
