--- a/skin/window.less
+++ b/skin/window.less
@@ -32,6 +32,16 @@ button
     border-color: #383838;
 }
 
+textbox,
+menulist {
+    border-color: #616161 !important;
+}
+
+menulist {
+    padding: 2px;
+    background-image: none !important;
+}
+
 minimap
 {
     border-left: 1px solid #353535 !important;
@@ -63,11 +73,6 @@ window#komodo_main :not(toolbarbutton):not(toolbaritem)
     {
         padding: 6px;
     }
-}
-
-separator.groovy-thin,
-separator.groove {
-  border-color: rgba(220, 220, 220, 0.1) !important;
 }
 
 notification
